--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 		<thead></thead>
 		<tbody></tbody>
 	</table>
-	<script src="./setting.js"></script>
-	<script src="./search.js"></script>
+	<script src="./js/setting.js"></script>
+	<script src="./js/search.js"></script>
 </body>
 
 </html>
