--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<input type="text" id="artist" placeholder="アーティスト名を入力">
 		<select id="genre">
 			<option value="">ジャンルを選択</option>
-			<option value="アニメ">アニメ</option>
+			<option value="アニソン">アニソン</option>
 			<option value="ゲーム">ゲーム</option>
 			<option value="ポップス">ポップス</option>
 			<option value="ボカロ">ボカロ</option>
